# Voice-txt

./: .env.example  .env_template  README.md  Voice-TxT.ps1  create_shortcut.ps1  kill_port.ps1  main.py  pyproject.toml  test_lmstudio.py  voice_txt.spec
app/: build_final_gif.py  build_frames.py  build_gif.py  build_icon.py  build_mic.py  overlay.py  server.py
app/static/: index.html
